6571600: JNI use results in UnsatisfiedLinkError looking for libmawt.so

Fix is to call dladdr with name less likely to cause name conflict.

Reviewed-by: serb, anthony